# patchbay

./: .gitignore  demo.py  init.toml  init.toml.example  models.py  pyproject.toml  server.py  state.py
nodes/: __init__.py  _node.py  mpv.py  mux.py  out_icecast.py
typings/: jack.pyi
